Swagger schema validation on debug
